--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 我的Blog
+title: My Blog
 ---
 <h2>{{ page.title }}</h2>
-<p>最新文章</p>
+<p>File List</p>
 <ul>
 	{% for post in site.posts %}
 		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
